// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandableList /> should render with a Item 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={false}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <li
        className="listItemPadding"
      >
        <div
          className="listItemContainer"
        >
          <Checkbox
            bsClass="checkbox"
            checked={false}
            disabled={false}
            inline={true}
            inputRef={[Function]}
            onChange={[MockFunction]}
            title=""
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[MockFunction]}
                type="checkbox"
              />
            </label>
          </Checkbox>
          <div
            className="expandBoxContainer"
          >
            <div
              className="fa-stack expandBox"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <Icon
                className="fa-stack-1x iconBackground"
                name="circle"
              >
                <FontAwesomeIcon
                  className="fa-stack-1x iconBackground"
                  icon={
                    Object {
                      "iconName": "circle",
                      "prefix": "fas",
                    }
                  }
                >
                  <svg
                    className="svg-inline--fa fa-circle"
                  />
                </FontAwesomeIcon>
              </Icon>
              <Icon
                className="fa-stack-1x"
                name="angle-up"
              >
                <FontAwesomeIcon
                  className="fa-stack-1x"
                  icon={
                    Object {
                      "iconName": "angle-up",
                      "prefix": "fas",
                    }
                  }
                >
                  <svg
                    className="svg-inline--fa fa-angle-up"
                  />
                </FontAwesomeIcon>
              </Icon>
            </div>
          </div>
          <span
            className="header"
          >
            <span
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Wheel of time
            </span>
          </span>
        </div>
        <div
          className="expandableContent"
        />
      </li>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with a nested ExpandableList 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={true}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <li
        className="listItemPadding"
      >
        <div
          className="listItemContainer"
        >
          <Checkbox
            bsClass="checkbox"
            checked={false}
            disabled={false}
            inline={true}
            inputRef={[Function]}
            onChange={[MockFunction]}
            title=""
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[MockFunction]}
                type="checkbox"
              />
            </label>
          </Checkbox>
          <div
            className="expandBoxContainer"
          >
            <div
              className="fa-stack expandBox"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <Icon
                className="fa-stack-1x iconBackground"
                name="circle"
              >
                <FontAwesomeIcon
                  className="fa-stack-1x iconBackground"
                  icon={
                    Object {
                      "iconName": "circle",
                      "prefix": "fas",
                    }
                  }
                >
                  <svg
                    className="svg-inline--fa fa-circle"
                  />
                </FontAwesomeIcon>
              </Icon>
              <Icon
                className="fa-stack-1x"
                name="angle-down"
              >
                <FontAwesomeIcon
                  className="fa-stack-1x"
                  icon={
                    Object {
                      "iconName": "angle-down",
                      "prefix": "fas",
                    }
                  }
                >
                  <svg
                    className="svg-inline--fa fa-angle-down"
                  />
                </FontAwesomeIcon>
              </Icon>
            </div>
          </div>
          <span
            className="header"
          >
            <span
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Wheel of time
            </span>
          </span>
        </div>
        <div
          className="expandableContent"
        >
          <ExpandableList>
            <ul
              className="list"
            >
              <ExpandableListItem
                checked={false}
                expandable={true}
                expanded={false}
                header="Edmonds Field"
                indetermined={false}
                onChange={[MockFunction]}
                padded={true}
                selectable={true}
                stayExpanded={false}
              >
                <li
                  className="listItemPadding"
                >
                  <div
                    className="listItemContainer"
                  >
                    <Checkbox
                      bsClass="checkbox"
                      checked={false}
                      disabled={false}
                      inline={true}
                      inputRef={[Function]}
                      onChange={[MockFunction]}
                      title=""
                    >
                      <label
                        className="checkbox-inline"
                        title=""
                      >
                        <input
                          checked={false}
                          disabled={false}
                          onChange={[MockFunction]}
                          type="checkbox"
                        />
                      </label>
                    </Checkbox>
                    <div
                      className="expandBoxContainer"
                    >
                      <div
                        className="fa-stack expandBox"
                        onClick={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <Icon
                          className="fa-stack-1x iconBackground"
                          name="circle"
                        >
                          <FontAwesomeIcon
                            className="fa-stack-1x iconBackground"
                            icon={
                              Object {
                                "iconName": "circle",
                                "prefix": "fas",
                              }
                            }
                          >
                            <svg
                              className="svg-inline--fa fa-circle"
                            />
                          </FontAwesomeIcon>
                        </Icon>
                        <Icon
                          className="fa-stack-1x"
                          name="angle-up"
                        >
                          <FontAwesomeIcon
                            className="fa-stack-1x"
                            icon={
                              Object {
                                "iconName": "angle-up",
                                "prefix": "fas",
                              }
                            }
                          >
                            <svg
                              className="svg-inline--fa fa-angle-up"
                            />
                          </FontAwesomeIcon>
                        </Icon>
                      </div>
                    </div>
                    <span
                      className="header"
                    >
                      <span
                        onClick={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        Edmonds Field
                      </span>
                    </span>
                  </div>
                  <div
                    className="expandableContent"
                  />
                </li>
              </ExpandableListItem>
            </ul>
          </ExpandableList>
        </div>
      </li>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with no children 1`] = `
<ExpandableList>
  <ul
    className="list"
  />
</ExpandableList>
`;
